update enrolment to include studyId
